Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/generics/inference/6278587/T6278587Neg.out
T6278587Neg.java:18:10: compiler.err.prob.found.req: (compiler.misc.inferred.do.not.conform.to.lower.bounds: T, T6278587Neg.C)
1 error
